added form validation with vee-validate

--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -14,3 +14,9 @@
 .card-description{
   height: 50px !important;
 }
+
+span .error-span{
+  display: block !important;
+  margin-left: 15px !important;
+  height: 20px;
+}
